--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,70 @@
 accelerate==0.21.0
 aiohttp==3.9.5
 aiosignal==1.3.1
+alembic==1.14.1
+annotated-types==0.7.0
 anyio==4.3.0
 appnope==0.1.4
+APScheduler==3.11.0
 asttokens==2.4.1
 async-timeout==4.0.3
+asyncer==0.0.8
 attrs==23.2.0
 backoff==2.2.1
 beautifulsoup4==4.12.3
 bitsandbytes==0.42.0
+cachetools==5.5.1
 certifi==2024.2.2
+cffi==1.17.1
 charset-normalizer==3.3.2
 chromadb==0.3.23
 click==8.1.7
 clickhouse-connect==0.7.8
+cloudpickle==3.1.1
 colorama==0.4.6
+colorlog==6.9.0
 comm==0.2.2
+cryptography==43.0.3
 dataclasses-json==0.6.4
+datasets==3.2.0
 debugpy==1.8.1
 decorator==5.1.1
+dill==0.3.8
 diskcache==5.6.3
+distro==1.9.0
+dnspython==2.7.0
+dspy==2.6.2
 duckdb==0.10.1
+email_validator==2.2.0
 exceptiongroup==1.2.0
 executing==2.0.1
-fastapi==0.110.1
+fastapi==0.115.8
+fastapi-sso==0.16.0
 filelock==3.13.4
 frozenlist==1.4.1
 fsspec==2024.3.1
+gunicorn==22.0.0
 h11==0.14.0
 hnswlib==0.8.0
+httpcore==1.0.7
 httptools==0.6.1
-huggingface-hub==0.17.3
+httpx==0.27.2
+huggingface-hub==0.28.1
 idna==3.7
+importlib_metadata==8.6.1
 IProgress==0.4
 ipykernel==6.29.4
 ipython==8.23.0
 ipywidgets==8.1.2
 jedi==0.19.1
 Jinja2==3.1.3
+jiter==0.8.2
 joblib==1.4.0
+json_repair==0.35.0
 jsonpatch==1.33
 jsonpointer==2.4
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 jupyterlab_widgets==3.0.10
@@ -49,19 +73,26 @@ langchain-community==0.0.34
 langchain-core==0.1.46
 langchain-text-splitters==0.0.1
 langsmith==0.1.51
+litellm==1.57.4
 llama_cpp_python==0.2.61
 lz4==4.3.3
+magicattr==0.1.6
+Mako==1.3.9
 MarkupSafe==2.1.5
 marshmallow==3.21.1
 matplotlib-inline==0.1.6
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.5
+multiprocess==0.70.16
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.3
 nltk==3.8.1
 numpy==1.26.4
+oauthlib==3.2.2
+openai==1.61.1
+optuna==4.2.0
 orjson==3.10.1
 packaging==23.2
 pandas==2.2.2
@@ -74,15 +105,25 @@ prompt-toolkit==3.0.43
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pydantic==1.10.13
+pyarrow==19.0.0
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
 Pygments==2.17.2
+PyJWT==2.10.1
+PyNaCl==1.5.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.18
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==25.1.2
+redis==5.2.1
+referencing==0.36.2
 regex==2023.12.25
-requests==2.31.0
+requests==2.32.3
+rpds-py==0.22.3
+rq==2.1.0
 safetensors==0.4.2
 scikit-learn==1.4.2
 scipy==1.11.3
@@ -93,27 +134,33 @@ sniffio==1.3.1
 soupsieve==2.5
 SQLAlchemy==2.0.29
 stack-data==0.6.3
-starlette==0.37.2
+starlette==0.45.3
 sympy==1.12
 tenacity==8.2.3
+termcolor==2.5.0
 threadpoolctl==3.4.0
-tokenizers==0.14.1
+tiktoken==0.8.0
+tokenizers==0.21.0
 torch==2.2.2
 torchvision==0.17.2
 tornado==6.4
-tqdm==4.66.2
+tqdm==4.67.1
 traitlets==5.14.2
 transformers==4.34.0
 typer==0.9.0
 typing-inspect==0.9.0
-typing_extensions==4.11.0
+typing_extensions==4.12.2
 tzdata==2024.1
+tzlocal==5.2
+ujson==5.10.0
 urllib3==2.2.1
-uvicorn==0.29.0
+uvicorn==0.22.0
 uvloop==0.19.0
 watchfiles==0.21.0
 wcwidth==0.2.13
 websockets==12.0
 widgetsnbextension==4.0.10
+xxhash==3.5.0
 yarl==1.9.4
+zipp==3.21.0
 zstandard==0.22.0
