--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ certifi==2024.2.2
 cffi==1.17.1
 charset-normalizer==3.3.2
 chromadb==0.3.23
-click==8.1.7
+click==8.1.8
 clickhouse-connect==0.7.8
 cloudpickle==3.1.1
 colorama==0.4.6
@@ -29,15 +29,18 @@ dataclasses-json==0.6.4
 datasets==3.2.0
 debugpy==1.8.1
 decorator==5.1.1
+diffusers==0.32.2
 dill==0.3.8
 diskcache==5.6.3
 distro==1.9.0
 dnspython==2.7.0
 dspy==2.6.2
 duckdb==0.10.1
+duckduckgo_search==7.3.2
 email_validator==2.2.0
 exceptiongroup==1.2.0
 executing==2.0.1
+faiss-cpu==1.10.0
 fastapi==0.115.8
 fastapi-sso==0.16.0
 filelock==3.13.4
@@ -49,7 +52,7 @@ hnswlib==0.8.0
 httpcore==1.0.7
 httptools==0.6.1
 httpx==0.27.2
-huggingface-hub==0.28.1
+huggingface-hub==0.25.2
 idna==3.7
 importlib_metadata==8.6.1
 IProgress==0.4
@@ -75,6 +78,7 @@ langchain-text-splitters==0.0.1
 langsmith==0.1.51
 litellm==1.57.4
 llama_cpp_python==0.2.61
+lxml==5.3.0
 lz4==4.3.3
 magicattr==0.1.6
 Mako==1.3.9
@@ -101,6 +105,7 @@ pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.2.0
 posthog==3.5.0
+primp==0.12.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
 ptyprocess==0.7.0
@@ -118,6 +123,7 @@ python-multipart==0.0.18
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==25.1.2
+rank-bm25==0.2.2
 redis==5.2.1
 referencing==0.36.2
 regex==2023.12.25
@@ -146,7 +152,7 @@ torchvision==0.17.2
 tornado==6.4
 tqdm==4.67.1
 traitlets==5.14.2
-transformers==4.34.0
+transformers==4.48.3
 typer==0.9.0
 typing-inspect==0.9.0
 typing_extensions==4.12.2
