--- a/requirements.txt
+++ b/requirements.txt
@@ -1,172 +1,232 @@
-accelerate==0.21.0
-aiohttp==3.9.5
-aiosignal==1.3.1
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
 alembic==1.14.1
+altair==5.5.0
 annotated-types==0.7.0
-anyio==4.3.0
-appnope==0.1.4
+anyio==4.8.0
 APScheduler==3.11.0
-asttokens==2.4.1
-async-timeout==4.0.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
+async-lru==2.0.4
+async-timeout==5.0.1
 asyncer==0.0.8
-attrs==23.2.0
+attrs==25.1.0
+babel==2.17.0
 backoff==2.2.1
 beautifulsoup4==4.12.3
-bitsandbytes==0.42.0
+bleach==6.2.0
+blinker==1.9.0
 cachetools==5.5.1
-certifi==2024.2.2
+certifi==2025.1.31
 cffi==1.17.1
-charset-normalizer==3.3.2
-chromadb==0.3.23
+charset-normalizer==3.4.1
 click==8.1.8
-clickhouse-connect==0.7.8
 cloudpickle==3.1.1
-colorama==0.4.6
 colorlog==6.9.0
-comm==0.2.2
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
+contourpy==1.3.1
 cryptography==43.0.3
-dataclasses-json==0.6.4
+cycler==0.12.1
+dacite==1.9.1
 datasets==3.2.0
-debugpy==1.8.1
-decorator==5.1.1
-diffusers==0.32.2
+debugpy @ file:///home/conda/feedstock_root/build_artifacts/debugpy_1737269734548/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1733236420667/work
+defusedxml==0.7.1
 dill==0.3.8
 diskcache==5.6.3
 distro==1.9.0
 dnspython==2.7.0
-dspy==2.6.2
-duckdb==0.10.1
-duckduckgo_search==7.3.2
+dspy==2.6.0
+duckduckgo_search==7.3.0
 email_validator==2.2.0
-exceptiongroup==1.2.0
-executing==2.0.1
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1733569351617/work
 faiss-cpu==1.10.0
 fastapi==0.115.8
 fastapi-sso==0.16.0
-filelock==3.13.4
-frozenlist==1.4.1
-fsspec==2024.3.1
+fastjsonschema==2.21.1
+filelock==3.17.0
+fonttools==4.55.8
+fqdn==1.5.1
+frozenlist==1.5.0
+fsspec==2024.9.0
+gitdb==4.0.12
+GitPython==3.1.44
+greenlet==3.1.1
 gunicorn==22.0.0
 h11==0.14.0
-hnswlib==0.8.0
+htmlmin==0.1.12
 httpcore==1.0.7
-httptools==0.6.1
 httpx==0.27.2
-huggingface-hub==0.25.2
-idna==3.7
-importlib_metadata==8.6.1
-IProgress==0.4
-ipykernel==6.29.4
-ipython==8.23.0
-ipywidgets==8.1.2
-jedi==0.19.1
-Jinja2==3.1.3
+huggingface-hub==0.28.1
+idna==3.10
+ImageHash==4.3.1
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1737420181517/work
+ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1719845459717/work
+ipython @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_ipython_1738421264/work
+ipywidgets==8.1.5
+isoduration==20.11.0
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
+Jinja2==3.1.5
 jiter==0.8.2
-joblib==1.4.0
+joblib==1.4.2
+json5==0.10.0
 json_repair==0.35.0
-jsonpatch==1.33
-jsonpointer==2.4
+jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-jupyter_client==8.6.1
-jupyter_core==5.7.2
-jupyterlab_widgets==3.0.10
-langchain==0.1.16
-langchain-community==0.0.34
-langchain-core==0.1.46
-langchain-text-splitters==0.0.1
-langsmith==0.1.51
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.11.0
+jupyter-lsp==2.2.5
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
+jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.3.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+kiwisolver==1.4.8
 litellm==1.57.4
-llama_cpp_python==0.2.61
 lxml==5.3.0
-lz4==4.3.3
 magicattr==0.1.6
-Mako==1.3.9
-MarkupSafe==2.1.5
-marshmallow==3.21.1
-matplotlib-inline==0.1.6
-monotonic==1.6
+Mako==1.3.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
+mdurl==0.1.2
+mistune==3.1.1
 mpmath==1.3.0
-multidict==6.0.5
+multidict==6.1.0
+multimethod==1.12
 multiprocess==0.70.16
-mypy-extensions==1.0.0
-nest-asyncio==1.6.0
-networkx==3.3
-nltk==3.8.1
-numpy==1.26.4
+narwhals==1.26.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
+networkx==3.4.2
+notebook==7.3.2
+notebook_shim==0.2.4
+numpy==2.1.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 oauthlib==3.2.2
-openai==1.61.1
+openai==1.61.0
 optuna==4.2.0
-orjson==3.10.1
-packaging==23.2
-pandas==2.2.2
-parso==0.8.4
-pexpect==4.9.0
-pillow==10.3.0
-platformdirs==4.2.0
-posthog==3.5.0
-primp==0.12.0
-prompt-toolkit==3.0.43
-psutil==5.9.8
-ptyprocess==0.7.0
-pure-eval==0.2.2
+orjson==3.10.15
+overrides==7.7.0
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1733203243479/work
+pandas==2.2.3
+pandas-profiling==3.6.6
+pandocfilters==1.5.1
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
+patsy==1.0.1
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1733301927746/work
+phik==0.12.4
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
+pillow==11.1.0
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1733232627818/work
+primp==0.11.0
+prometheus_client==0.21.1
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1737453357274/work
+propcache==0.2.1
+protobuf==5.29.3
+psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1735327341346/work
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1733302279685/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl#sha256=92c32ff62b5fd8cf325bec5ab90d7be3d2a8ca8c8a3813ff487a8d2002630d1f
+pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
 pyarrow==19.0.0
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
-Pygments==2.17.2
+pydeck==0.9.1
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1736243443484/work
 PyJWT==2.10.1
 PyNaCl==1.5.0
-python-dateutil==2.9.0.post0
+pyparsing==3.2.1
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
 python-dotenv==1.0.1
+python-json-logger==3.2.1
 python-multipart==0.0.18
-pytz==2024.1
-PyYAML==6.0.1
-pyzmq==25.1.2
+pytz==2025.1
+PyWavelets==1.8.0
+PyYAML==6.0.2
+pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1738270958168/work
 rank-bm25==0.2.2
 redis==5.2.1
 referencing==0.36.2
-regex==2023.12.25
+regex==2024.11.6
 requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.9.4
 rpds-py==0.22.3
 rq==2.1.0
-safetensors==0.4.2
-scikit-learn==1.4.2
-scipy==1.11.3
-sentence-transformers==2.2.2
-sentencepiece==0.1.99
-six==1.16.0
+safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.1
+seaborn==0.13.2
+Send2Trash==1.8.3
+sentence-transformers==3.4.1
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
+smmap==5.0.2
 sniffio==1.3.1
-soupsieve==2.5
-SQLAlchemy==2.0.29
-stack-data==0.6.3
+soupsieve==2.6
+SQLAlchemy==2.0.37
+stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
 starlette==0.45.3
-sympy==1.12
-tenacity==8.2.3
+statsmodels==0.14.4
+streamlit==1.42.0
+sympy==1.13.1
+tenacity==9.0.0
 termcolor==2.5.0
-threadpoolctl==3.4.0
+terminado==0.18.1
+threadpoolctl==3.5.0
 tiktoken==0.8.0
+tinycss2==1.4.0
 tokenizers==0.21.0
-torch==2.2.2
-torchvision==0.17.2
-tornado==6.4
+toml==0.10.2
+tomli==2.2.1
+torch==2.6.0
+tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1732615898999/work
 tqdm==4.67.1
-traitlets==5.14.2
-transformers==4.48.3
-typer==0.9.0
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2024.1
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
+transformers==4.48.2
+triton==3.2.0
+typeguard==4.4.1
+types-python-dateutil==2.9.0.20241206
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1733188668063/work
+tzdata==2025.1
 tzlocal==5.2
 ujson==5.10.0
-urllib3==2.2.1
+uri-template==1.3.0
+urllib3==2.3.0
 uvicorn==0.22.0
-uvloop==0.19.0
-watchfiles==0.21.0
-wcwidth==0.2.13
-websockets==12.0
-widgetsnbextension==4.0.10
+visions==0.7.6
+watchdog==6.0.0
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+widgetsnbextension==4.0.13
+wordcloud==1.9.4
 xxhash==3.5.0
-yarl==1.9.4
-zipp==3.21.0
-zstandard==0.22.0
+yarl==1.18.3
+ydata-profiling==4.12.2
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
