--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ APScheduler==3.11.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
+asttokens==3.0.0
 async-lru==2.0.4
 async-timeout==5.0.1
 asyncer==0.0.8
@@ -26,14 +26,14 @@ charset-normalizer==3.4.1
 click==8.1.8
 cloudpickle==3.1.1
 colorlog==6.9.0
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
+comm==0.2.2
 contourpy==1.3.1
 cryptography==43.0.3
 cycler==0.12.1
 dacite==1.9.1
 datasets==3.2.0
-debugpy @ file:///home/conda/feedstock_root/build_artifacts/debugpy_1737269734548/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1733236420667/work
+debugpy==1.8.12
+decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.8
 diskcache==5.6.3
@@ -42,8 +42,8 @@ dnspython==2.7.0
 dspy==2.6.0
 duckduckgo_search==7.3.0
 email_validator==2.2.0
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1733569351617/work
+exceptiongroup==1.2.2
+executing==2.1.0
 faiss-cpu==1.10.0
 fastapi==0.115.8
 fastapi-sso==0.16.0
@@ -64,26 +64,26 @@ httpx==0.27.2
 huggingface-hub==0.28.1
 idna==3.10
 ImageHash==4.3.1
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1737420181517/work
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1719845459717/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_ipython_1738421264/work
+importlib_metadata==8.6.1
+ipykernel==6.29.5
+ipython==8.32.0
 ipywidgets==8.1.5
 isoduration==20.11.0
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
+jedi==0.19.2
 Jinja2==3.1.5
 jiter==0.8.2
 joblib==1.4.2
-json5==0.10.0
 json_repair==0.35.0
+json5==0.10.0
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter==1.1.1
+jupyter_client==8.6.3
 jupyter-console==6.6.3
+jupyter_core==5.7.2
 jupyter-events==0.11.0
 jupyter-lsp==2.2.5
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
 jupyter_server==2.15.0
 jupyter_server_terminals==0.5.3
 jupyterlab==4.3.5
@@ -98,7 +98,7 @@ Mako==1.3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.0
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.1.1
 mpmath==1.3.0
@@ -109,7 +109,7 @@ narwhals==1.26.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
+nest_asyncio==1.6.0
 networkx==3.4.2
 notebook==7.3.2
 notebook_shim==0.2.4
@@ -132,42 +132,43 @@ openai==1.61.0
 optuna==4.2.0
 orjson==3.10.15
 overrides==7.7.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1733203243479/work
+packaging==24.2
 pandas==2.2.3
 pandas-profiling==3.6.6
 pandocfilters==1.5.1
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
+parso==0.8.4
 patsy==1.0.1
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1733301927746/work
+pexpect==4.9.0
 phik==0.12.4
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
+pickleshare==0.7.5
 pillow==11.1.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1733232627818/work
+pip==25.0
+platformdirs==4.3.6
 primp==0.11.0
 prometheus_client==0.21.1
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1737453357274/work
+prompt_toolkit==3.0.50
 propcache==0.2.1
 protobuf==5.29.3
-psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1735327341346/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1733302279685/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl#sha256=92c32ff62b5fd8cf325bec5ab90d7be3d2a8ca8c8a3813ff487a8d2002630d1f
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
+psutil==6.1.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyarrow==19.0.0
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 pydeck==0.9.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1736243443484/work
+Pygments==2.19.1
 PyJWT==2.10.1
 PyNaCl==1.5.0
 pyparsing==3.2.1
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==3.2.1
 python-multipart==0.0.18
 pytz==2025.1
 PyWavelets==1.8.0
 PyYAML==6.0.2
-pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1738270958168/work
+pyzmq==26.2.1
 rank-bm25==0.2.2
 redis==5.2.1
 referencing==0.36.2
@@ -184,12 +185,13 @@ scipy==1.15.1
 seaborn==0.13.2
 Send2Trash==1.8.3
 sentence-transformers==3.4.1
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
+setuptools==75.8.0
+six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.37
-stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
+stack_data==0.6.3
 starlette==0.45.3
 statsmodels==0.14.4
 streamlit==1.42.0
@@ -204,14 +206,14 @@ tokenizers==0.21.0
 toml==0.10.2
 tomli==2.2.1
 torch==2.6.0
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1732615898999/work
+tornado==6.4.2
 tqdm==4.67.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
+traitlets==5.14.3
 transformers==4.48.2
 triton==3.2.0
 typeguard==4.4.1
 types-python-dateutil==2.9.0.20241206
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1733188668063/work
+typing_extensions==4.12.2
 tzdata==2025.1
 tzlocal==5.2
 ujson==5.10.0
@@ -220,13 +222,14 @@ urllib3==2.3.0
 uvicorn==0.22.0
 visions==0.7.6
 watchdog==6.0.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+wheel==0.45.1
 widgetsnbextension==4.0.13
 wordcloud==1.9.4
 xxhash==3.5.0
 yarl==1.18.3
 ydata-profiling==4.12.2
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
+zipp==3.21.0
