--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ alembic==1.14.1
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.8.0
+appnope==0.1.4
 APScheduler==3.11.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -39,8 +40,8 @@ dill==0.3.8
 diskcache==5.6.3
 distro==1.9.0
 dnspython==2.7.0
-dspy==2.6.0
-duckduckgo_search==7.3.0
+dspy==2.6.3
+duckduckgo_search==7.3.2
 email_validator==2.2.0
 exceptiongroup==1.2.2
 executing==2.1.0
@@ -91,7 +92,7 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 kiwisolver==1.4.8
-litellm==1.57.4
+litellm==1.61.6
 lxml==5.3.0
 magicattr==0.1.6
 Mako==1.3.8
@@ -109,24 +110,11 @@ narwhals==1.26.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
-nest_asyncio==1.6.0
+nest-asyncio==1.6.0
 networkx==3.4.2
 notebook==7.3.2
 notebook_shim==0.2.4
 numpy==2.1.3
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-cusparselt-cu12==0.6.2
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
 oauthlib==3.2.2
 openai==1.61.0
 optuna==4.2.0
@@ -142,7 +130,7 @@ pexpect==4.9.0
 phik==0.12.4
 pickleshare==0.7.5
 pillow==11.1.0
-pip==25.0
+pip==25.0.1
 platformdirs==4.3.6
 primp==0.11.0
 prometheus_client==0.21.1
@@ -191,7 +179,7 @@ smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.37
-stack_data==0.6.3
+stack-data==0.6.3
 starlette==0.45.3
 statsmodels==0.14.4
 streamlit==1.42.0
@@ -210,7 +198,6 @@ tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
 transformers==4.48.2
-triton==3.2.0
 typeguard==4.4.1
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
@@ -219,7 +206,8 @@ tzlocal==5.2
 ujson==5.10.0
 uri-template==1.3.0
 urllib3==2.3.0
-uvicorn==0.22.0
+uvicorn==0.29.0
+uvloop==0.21.0
 visions==0.7.6
 watchdog==6.0.0
 wcwidth==0.2.13
